pkgs/cupertino_http/lib/src/cronet.dart


  /// Destroy an instance of Cronet_UrlRequestStatusListener.
  void Cronet_UrlRequestStatusListener_Destroy(
    Cronet_UrlRequestStatusListenerPtr self,
  ) {
    return _Cronet_UrlRequestStatusListener_Destroy(
      self,
    );
  }

  late final _Cronet_UrlRequestStatusListener_DestroyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_UrlRequestStatusListenerPtr)>>(
      'Cronet_UrlRequestStatusListener_Destroy');
  late final _Cronet_UrlRequestStatusListener_Destroy =
      _Cronet_UrlRequestStatusListener_DestroyPtr.asFunction<
          void Function(Cronet_UrlRequestStatusListenerPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_UrlRequestStatusListener_SetClientContext(
    Cronet_UrlRequestStatusListenerPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_UrlRequestStatusListener_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UrlRequestStatusListener_SetClientContextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_UrlRequestStatusListenerPtr, Cronet_ClientContext)>>(
      'Cronet_UrlRequestStatusListener_SetClientContext');
  late final _Cronet_UrlRequestStatusListener_SetClientContext =
      _Cronet_UrlRequestStatusListener_SetClientContextPtr.asFunction<
          void Function(
              Cronet_UrlRequestStatusListenerPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_UrlRequestStatusListener_GetClientContext(
    Cronet_UrlRequestStatusListenerPtr self,
  ) {
    return _Cronet_UrlRequestStatusListener_GetClientContext(
      self,
    );
  }

  late final _Cronet_UrlRequestStatusListener_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(
                  Cronet_UrlRequestStatusListenerPtr)>>(
      'Cronet_UrlRequestStatusListener_GetClientContext');
  late final _Cronet_UrlRequestStatusListener_GetClientContext =
      _Cronet_UrlRequestStatusListener_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_UrlRequestStatusListenerPtr)>();

  /// Abstract interface Cronet_UrlRequestStatusListener is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  void Cronet_UrlRequestStatusListener_OnStatus(
    Cronet_UrlRequestStatusListenerPtr self,
    int status,
  ) {
    return _Cronet_UrlRequestStatusListener_OnStatus(
      self,
      status,
    );
  }

  late final _Cronet_UrlRequestStatusListener_OnStatusPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UrlRequestStatusListenerPtr,
              ffi.Int32)>>('Cronet_UrlRequestStatusListener_OnStatus');
  late final _Cronet_UrlRequestStatusListener_OnStatus =
      _Cronet_UrlRequestStatusListener_OnStatusPtr.asFunction<
          void Function(Cronet_UrlRequestStatusListenerPtr, int)>();

  /// The app creates an instance of Cronet_UrlRequestStatusListener by providing
  /// custom functions for each method.
  Cronet_UrlRequestStatusListenerPtr Cronet_UrlRequestStatusListener_CreateWith(
    Cronet_UrlRequestStatusListener_OnStatusFunc OnStatusFunc,
  ) {
    return _Cronet_UrlRequestStatusListener_CreateWith(
      OnStatusFunc,
    );
  }

  late final _Cronet_UrlRequestStatusListener_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_UrlRequestStatusListenerPtr Function(
                  Cronet_UrlRequestStatusListener_OnStatusFunc)>>(
      'Cronet_UrlRequestStatusListener_CreateWith');
  late final _Cronet_UrlRequestStatusListener_CreateWith =
      _Cronet_UrlRequestStatusListener_CreateWithPtr.asFunction<
          Cronet_UrlRequestStatusListenerPtr Function(
              Cronet_UrlRequestStatusListener_OnStatusFunc)>();

  /// Destroy an instance of Cronet_UrlRequestCallback.
  void Cronet_UrlRequestCallback_Destroy(
    Cronet_UrlRequestCallbackPtr self,
  ) {
    return _Cronet_UrlRequestCallback_Destroy(
      self,
    );
  }

  late final _Cronet_UrlRequestCallback_DestroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(Cronet_UrlRequestCallbackPtr)>>(
      'Cronet_UrlRequestCallback_Destroy');
  late final _Cronet_UrlRequestCallback_Destroy =
      _Cronet_UrlRequestCallback_DestroyPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_UrlRequestCallback_SetClientContext(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_UrlRequestCallback_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UrlRequestCallback_SetClientContextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_UrlRequestCallbackPtr, Cronet_ClientContext)>>(
      'Cronet_UrlRequestCallback_SetClientContext');
  late final _Cronet_UrlRequestCallback_SetClientContext =
      _Cronet_UrlRequestCallback_SetClientContextPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_UrlRequestCallback_GetClientContext(
    Cronet_UrlRequestCallbackPtr self,
  ) {
    return _Cronet_UrlRequestCallback_GetClientContext(
      self,
    );
  }

  late final _Cronet_UrlRequestCallback_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(Cronet_UrlRequestCallbackPtr)>>(
      'Cronet_UrlRequestCallback_GetClientContext');
  late final _Cronet_UrlRequestCallback_GetClientContext =
      _Cronet_UrlRequestCallback_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_UrlRequestCallbackPtr)>();

  /// Abstract interface Cronet_UrlRequestCallback is implemented by the app.
  /// The following concrete methods forward call to app implementation.
  /// The app doesn't normally call them.
  void Cronet_UrlRequestCallback_OnRedirectReceived(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
    Cronet_String new_location_url,
  ) {
    return _Cronet_UrlRequestCallback_OnRedirectReceived(
      self,
      request,
      info,
      new_location_url,
    );
  }

  late final _Cronet_UrlRequestCallback_OnRedirectReceivedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_UrlRequestCallbackPtr,
              Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr,
              Cronet_String)>>('Cronet_UrlRequestCallback_OnRedirectReceived');
  late final _Cronet_UrlRequestCallback_OnRedirectReceived =
      _Cronet_UrlRequestCallback_OnRedirectReceivedPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr, Cronet_String)>();

  void Cronet_UrlRequestCallback_OnResponseStarted(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
  ) {
    return _Cronet_UrlRequestCallback_OnResponseStarted(
      self,
      request,
      info,
    );
  }

  late final _Cronet_UrlRequestCallback_OnResponseStartedPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_UrlRequestCallbackPtr,
                  Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr)>>(
      'Cronet_UrlRequestCallback_OnResponseStarted');
  late final _Cronet_UrlRequestCallback_OnResponseStarted =
      _Cronet_UrlRequestCallback_OnResponseStartedPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr)>();

  void Cronet_UrlRequestCallback_OnReadCompleted(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
    Cronet_BufferPtr buffer,
    int bytes_read,
  ) {
    return _Cronet_UrlRequestCallback_OnReadCompleted(
      self,
      request,
      info,
      buffer,
      bytes_read,
    );
  }

  late final _Cronet_UrlRequestCallback_OnReadCompletedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_UrlRequestCallbackPtr,
              Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr,
              Cronet_BufferPtr,
              ffi.Uint64)>>('Cronet_UrlRequestCallback_OnReadCompleted');
  late final _Cronet_UrlRequestCallback_OnReadCompleted =
      _Cronet_UrlRequestCallback_OnReadCompletedPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr, Cronet_BufferPtr, int)>();

  void Cronet_UrlRequestCallback_OnSucceeded(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
  ) {
    return _Cronet_UrlRequestCallback_OnSucceeded(
      self,
      request,
      info,
    );
  }

  late final _Cronet_UrlRequestCallback_OnSucceededPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_UrlRequestCallbackPtr,
                  Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr)>>(
      'Cronet_UrlRequestCallback_OnSucceeded');
  late final _Cronet_UrlRequestCallback_OnSucceeded =
      _Cronet_UrlRequestCallback_OnSucceededPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr)>();

  void Cronet_UrlRequestCallback_OnFailed(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
    Cronet_ErrorPtr error,
  ) {
    return _Cronet_UrlRequestCallback_OnFailed(
      self,
      request,
      info,
      error,
    );
  }

  late final _Cronet_UrlRequestCallback_OnFailedPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              Cronet_UrlRequestCallbackPtr,
              Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr,
              Cronet_ErrorPtr)>>('Cronet_UrlRequestCallback_OnFailed');
  late final _Cronet_UrlRequestCallback_OnFailed =
      _Cronet_UrlRequestCallback_OnFailedPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr, Cronet_ErrorPtr)>();

  void Cronet_UrlRequestCallback_OnCanceled(
    Cronet_UrlRequestCallbackPtr self,
    Cronet_UrlRequestPtr request,
    Cronet_UrlResponseInfoPtr info,
  ) {
    return _Cronet_UrlRequestCallback_OnCanceled(
      self,
      request,
      info,
    );
  }

  late final _Cronet_UrlRequestCallback_OnCanceledPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_UrlRequestCallbackPtr,
                  Cronet_UrlRequestPtr, Cronet_UrlResponseInfoPtr)>>(
      'Cronet_UrlRequestCallback_OnCanceled');
  late final _Cronet_UrlRequestCallback_OnCanceled =
      _Cronet_UrlRequestCallback_OnCanceledPtr.asFunction<
          void Function(Cronet_UrlRequestCallbackPtr, Cronet_UrlRequestPtr,
              Cronet_UrlResponseInfoPtr)>();

  /// The app creates an instance of Cronet_UrlRequestCallback by providing custom
  /// functions for each method.
  Cronet_UrlRequestCallbackPtr Cronet_UrlRequestCallback_CreateWith(
    Cronet_UrlRequestCallback_OnRedirectReceivedFunc OnRedirectReceivedFunc,
    Cronet_UrlRequestCallback_OnResponseStartedFunc OnResponseStartedFunc,
    Cronet_UrlRequestCallback_OnReadCompletedFunc OnReadCompletedFunc,
    Cronet_UrlRequestCallback_OnSucceededFunc OnSucceededFunc,
    Cronet_UrlRequestCallback_OnFailedFunc OnFailedFunc,
    Cronet_UrlRequestCallback_OnCanceledFunc OnCanceledFunc,
  ) {
    return _Cronet_UrlRequestCallback_CreateWith(
      OnRedirectReceivedFunc,
      OnResponseStartedFunc,
      OnReadCompletedFunc,
      OnSucceededFunc,
      OnFailedFunc,
      OnCanceledFunc,
    );
  }
